--- a/css/screen.css
+++ b/css/screen.css
@@ -12,15 +12,13 @@
     --color-dark: #464646;
     --color-front: var(--color-dark);
     --color-back: var(--color-light);
+    --global-color-secondary:#006DB0;
 
     --global-color-error: #FF3333;
     --global-color-error-x-transparent: #FF33334d;
 
     --global-input-error-borderColor: var(--global-color-error);
     --global-input-error-boxShadowColor: var(--global-color-error-x-transparent);
-    /* transitions */
-    /*Size */
-    --standaard: 1rem
 }
 
 
@@ -75,8 +73,8 @@ Default markup for images to make them responsive
 */
 
 img {
-    width: 100%;
     vertical-align: top;
+    max-width: 100vw;
 }
 
 /*
@@ -158,13 +156,6 @@ figcaption {
     margin-top: 0.5rem;
 }
 
-hr {
-    border: 0;
-    height: 1px;
-    background: LightGrey;
-    margin: 0 0 1.5rem;
-}
-
 label,
 input {
     display: block;
@@ -190,49 +181,6 @@ input::placeholder {
     row-gap: 0.625rem;
     justify-items: center;
     padding: 2.5rem 5rem 1.25rem 5rem;
-}
-
-@media (max-width: 48rem) {
-    .o-grid {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 2.5rem 0.625rem 1.25rem 0.625rem;
-    }
-
-    h1 {
-        font-size: 3rem;
-    }
-}
-
-@media (min-width: 48rem) {
-    .o-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    h1 {
-        font-size: 4rem;
-    }
-}
-
-@media (min-width: 52rem) {
-    h1 {
-        font-size: 4rem;
-    }
-}
-
-@media (min-width: 62rem) {
-    .o-grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    h1 {
-        font-size: 5rem;
-    }
-}
-
-@media (min-width: 66rem) {
-    h1 {
-        font-size: 6.5rem;
-    }
 }
 
 .o-grid-head {
@@ -263,13 +211,20 @@ input::placeholder {
 \*------------------------------------*/
 
 .c-grid {
-    padding: 60px;
+    padding: 3.75rem;
     display: grid;
-    grid-gap: 40px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+    grid-gap: 2.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, 2fr));
     align-items: center;
 }
 
+.c-grid__landing {
+    padding: 3.75rem;
+    display: grid;
+    grid-gap: 1.5rem;
+    grid-template-columns: 1fr;
+    align-items: center;
+}
 
 .landingpage {
     color: var(--color-light);
@@ -284,7 +239,7 @@ input::placeholder {
     -moz-appearance: none;
     appearance: none;
     outline: none;
-    border: 0.3125rem solid #006DB0;
+    border: 0.3125rem solid var(--global-color-secondary);
     border-radius: 1rem;
     box-shadow:
         inset 0 0 0.5rem rgba(0, 0, 0, 0.1),
@@ -310,9 +265,9 @@ input::placeholder {
     border: none;
     border-radius: 1rem;
     color: #FFFFFF;
-    background-color: #006DB0;
+    background-color: var(--global-color-secondary);
     height: 3rem;
-    margin: 0 0 10px 0;
+    margin: 0 0 0.625rem 0;
     padding: 1rem;
 }
 
@@ -343,6 +298,32 @@ input::placeholder {
     display: none;
     width: 100%;
 }
+
+.c-mockup-img{
+    max-height: 30rem;
+}
+.c-mockup-imageholder{
+    display: flex;
+    justify-content: center;
+}
+
+.c-parking-card {
+    width: 16rem;
+    max-width: 100%;
+    display: inline-block;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 0;
+    box-shadow: 0 0 1rem grey;
+    overflow: hidden;
+    transition: 125ms ease-in-out;
+    -webkit-transition: 125ms ease-in-out;
+    -moz-transition: 125ms ease-in-out;
+    margin: 1rem 0;
+}
+
 
 /*------------------------------------*\
 #States
@@ -394,11 +375,11 @@ input::placeholder {
 }
 
 input:checked+.slider {
-    background-color: #006DB0;
+    background-color: var(--global-color-secondary);
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px#006DB0;
+    box-shadow: 0 0 1px var(--global-color-secondary);
 }
 
 input:checked+.slider:before {
@@ -407,27 +388,10 @@ input:checked+.slider:before {
     transform: translateX(1.625rem);
 }
 
-.c-parking-card {
-    width: 16rem;
-    max-width: 100%;
-    display: inline-block;
-    font-size: 1.1rem;
-    line-height: 1.5rem;
-    text-align: center;
-    background-color: #fff;
-    border-radius: 0px;
-    box-shadow: 0 0 1rem grey;
-    overflow: hidden;
-    transition: 125ms ease-in-out;
-    -webkit-transition: 125ms ease-in-out;
-    -moz-transition: 125ms ease-in-out;
-    margin: 1rem 0;
-}
-
 .top-smaller {
-    margin: 5px 5px 5px 5px;
+    margin: 0.3125rem;
     width: 75%;
-    border-bottom: 2px solid black;
+    border-bottom: 0.125rem solid black;
 }
 
 .maan {
@@ -446,4 +410,53 @@ input:checked+.slider:before {
     max-width: 1.25rem;
     max-height: 1.25rem;
     cursor: pointer;
+}
+
+@media (max-width: 48rem) {
+    .o-grid {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 2.5rem 0.625rem 1.25rem 0.625rem;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 48rem) {
+    .o-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+}
+
+@media (min-width: 52rem) {
+    h1 {
+        font-size: 4rem;
+    }
+    .c-grid__landing{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+}
+
+@media (min-width: 62rem) {
+    .o-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    h1 {
+        font-size: 5rem;
+    }
+
+}
+
+@media (min-width: 66rem) {
+    h1 {
+        font-size: 6.5rem;
+    }
 }
